[package]
name = "devices"
version = "0.1.0"
authors = ["zztkm"]
edition = "2021"
license = "MIT"
description = "A simple program to list video devices"
readme = "README.md"
repository = "https://github.com/zztkm/devices/"
homepage = "https://github.com/zztkm/devices/"
keywords = ["device"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# nokhwa の新しいリリースが作られるまでは、git から直接取得する
nokhwa = { git = "https://github.com/l1npengtul/nokhwa.git", branch = "0.10", features = [
    "input-native",
    "output-wgpu",
] }
winsafe = { version = "0.0.20", features = ["dshow"] }
